libhocr (0.10.11)

 * Fix font segmentation when fonts overlap
 * Re change defaults for image prossecing
 * Fix font slicing bug
 * Sync hocr-gtk and hocr version numbers with libhocr version number
 * Fix memory leaks in hocr-gtk
 * Fix gtk pixbuf save extention problem

 -- Yaacov Zamir <kzamir_at_walla.co.il>  Thursday, 06 July 2008 09:04
 
libhocr (0.10.11)

 * Change default values in hocr command line utility
 * Change default values in hocr-gtk graphical utility
 * Add scale and threshold settings to OO c++ and python bindings

 -- Yaacov Zamir <kzamir_at_walla.co.il>  Thursday, 26 June 2008 09:04
 
libhocr (0.10.10)

 * Fix hocr-gtk example remember window size
 * Fix hocr-gtk example show image filename in title
 * hocr-gtk example requires python bindings 
 * add an ho_array object for arithmetic based operations
 * add an ho_array_hist helper object for ho_array
 * add an ho_array_stat helper object for ho_array's statistics
 * add ah ho_bitmap_hist helper object for ho_bitmap
 * Fix libhocrgtk build on none gtk systems (Bug report: Nadav Mavor)
 
 -- Yaacov Zamir <kzamir_at_walla.co.il>  Sunday, 10 May 2008 09:04
 
libhocr (0.10.9)

 * Re-Fix auto scaling bug

 -- Yaacov Zamir <kzamir_at_walla.co.il>  Thursday, 8 May 2008 09:04
 
libhocr (0.10.8)

 * Fix auto scaling bug
 * Refine david font 

 -- Yaacov Zamir <kzamir_at_walla.co.il>  Thursday, 8 May 2008 09:04
 
libhocr (0.10.7)

 * hocr-gtk save session parameters
 * remove .py from hocr-gtk example python scripts file names
 * use libtiff for black and white 
   hocr-pixbuf export and import using tiff format
 * hocr example can read black and white tiff image files
   without using gtk
 * use sane-pygtk as the scanner utility
 * make the configure script more flexible

 -- Yaacov Zamir <kzamir_at_walla.co.il>  Thursday, 24 Apr 2008 09:04
 
libhocr (0.10.6)

 * hocr-gtk example less path dependent (use sys.prefix)
 * hocr-gtk example can use tesseract-ocr if present