@@ -3,12 +3,15 @@ EXTRA_DIST = hocr.i
 
 if WITH_PYTHON
 
+python_PYTHON	= hocr.py
+pyexec_PYTHON	= _hocr.so
+
 DEPS= $(top_builddir)/src/libhocr.la
 
 CLEANFILES = *.o *.cxx *.so *wrap* *.py
 
 all-am: _hocr.so
-	
+
 if LINUX_HOST
 _hocr.so: hocr_wrap.cxx
 	g++ -fPIC -c hocr_wrap.cxx $(PY_CFLAGS) -I$(top_srcdir)/src
@@ -24,9 +27,7 @@ endif
 hocr_wrap.cxx: hocr.i
 	swig -python -c++ -threads hocr.i
 
-install-data-local: _hocr.so
-	$(mkinstalldirs) $(DESTDIR)$(PY_MODULES_PATH)
-	$(INSTALL_DATA) _hocr.so $(DESTDIR)$(PY_MODULES_PATH)/_hocr.so
-	$(INSTALL_DATA) hocr.py $(DESTDIR)$(PY_MODULES_PATH)/hocr.py
+install-exec-hook:
+	chmod 755 $(DESTDIR)/$(pyexecdir)/_hocr.so
 
 endif
