@@ -1,4 +1,4 @@
 EXTRA_DIST = hocr_c.c hocr_cpp.cpp hocr_python.py
 
-libhdatedocdir = ${prefix}/share/doc/libhocr/examples/bindings
-libhdatedoc_DATA = hocr_c.c hocr_cpp.cpp hocr_python.py
+examples_binding_dir = ${prefix}/share/doc/libhocr/examples/bindings
+examples_binding__DATA = hocr_c.c hocr_cpp.cpp hocr_python.py
